<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- App name and related strings -->
    <string name="app_name">Social Transport</string>
    <string name="app_author">Michele Schimd</string>
    
    <!-- Activity titles and other related strings -->
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_tab">Social Transit</string>

    <!-- Menu items strings -->
    <string name="action_settings">Settings</string>
    <string name="action_map">Map</string>
    <string name="action_share">Share</string>
    <string name="start_service_button_text">Start</string>
    <string name="stop_service_button_text">Stop</string>

    <!-- These strings are displayed states for the location service -->
    <string name="location_service_state_header">Service State </string>
    <string name="location_service_state_running">Running</string>
    <string name="location_service_state_stopped">Stopped</string>
    <string name="location_service_state_unknwon">Unknown</string>
    <!-- Strings for the service fragment -->
    <string name="service_fragment_user_speed_header">Speed: </string>
    <string name="service_fragment_user_speed">- Km/h</string>
    <string name="service_fragment_track_label_title">Tracking Session</string>
    <string name="service_fragment_track_label_description">Records your route</string>
    
    

</resources>