<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dip" >
    
   <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/service_start_button"
        	android:layout_height="wrap_content"
        	android:layout_width="0dp"
        	android:layout_weight="1"
            android:text="@string/start_service_button_text" />

        <Button
            android:id="@+id/service_stop_button"
        	android:layout_height="wrap_content"
        	android:layout_width="0dp"
        	android:layout_weight="1"
            android:text="@string/stop_service_button_text" />

    </LinearLayout>
   
   <LinearLayout
       android:orientation="horizontal"
       android:layout_height="wrap_content"
       android:layout_width="fill_parent">
        
   <TextView 
       android:layout_height="wrap_content"
       android:layout_width="wrap_content"
       android:text="@string/location_service_state_header"/>
   
   <TextView 
       android:id="@+id/serviceStateSummuryTextView"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:gravity="right"
       android:text="@string/location_service_state_unknwon"/>
   
    
   </LinearLayout>
   
   <LinearLayout
       android:layout_height="wrap_content"
       android:layout_width="fill_parent"
       android:orientation="horizontal">
       
       <TextView 
           android:id="@+id/userSpeedTextViewHeader"
           android:layout_height="wrap_content"
           android:layout_width="wrap_content"
           android:text="@string/service_fragment_user_speed_header"/>
       
       <TextView       
           android:id="@+id/userSpeedTextView"           
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:gravity="right"
           android:text="@string/service_fragment_user_speed"/>
       
   </LinearLayout>
   
</LinearLayout>
